policies/constraints/require-probes.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: RequireProbes
metadata:
  name: require-probes-workloads
spec:
  enforcementAction: warn
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaces:
      - frontend
      - backend
      - data-access
